# CMakeFiles.txt for the glim_image
#
# Vladimir S. FONOV - vladimir.fonov@gmail.com

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)


SET(GLIM_IMAGE_PACKAGE_VERSION_MAJOR 1)
SET(GLIM_IMAGE_PACKAGE_VERSION_MINOR 2)
SET(GLIM_IMAGE_PACKAGE_VERSION_PATCH 00)

IF(NOT MINC_TOOLKIT_BUILD)

  PROJECT(glim_image)

  # Packaging defines
  SET(CPACK_GENERATOR TGZ)
  SET(CPACK_PACKAGE_VERSION_MAJOR ${GLIM_IMAGE_PACKAGE_VERSION_MAJOR})
  SET(CPACK_PACKAGE_VERSION_MINOR ${GLIM_IMAGE_PACKAGE_VERSION_MINOR})
  SET(CPACK_PACKAGE_VERSION_PATCH ${GLIM_IMAGE_PACKAGE_VERSION_PATCH})
  INCLUDE(CPack)

  FIND_PACKAGE( MINC2 REQUIRED )
ENDIF(NOT MINC_TOOLKIT_BUILD)

SET(PACKAGE "glim_image")
SET(PACKAGE_BUGREPORT "jason@bic.mni.mcgill.ca")

SET(PACKAGE_NAME "glim_image")
SET(PACKAGE_VERSION "${GLIM_IMAGE_PACKAGE_VERSION_MAJOR}.${GLIM_IMAGE_PACKAGE_VERSION_MINOR}.${GLIM_IMAGE_PACKAGE_VERSION_PATCH}")
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

INCLUDE( ${MINC2_USE_FILE} )
LINK_LIBRARIES(${VOLUME_IO_LIBRARIES} ${MINC2_LIBRARIES})

ADD_DEFINITIONS(-DHAVE_CONFIG_H)


# aliases
SET(VERSION "${PACKAGE_VERSION}")

# others
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/epm-header.in  ${CMAKE_CURRENT_BINARY_DIR}/epm-header)
# SET(PERL ${PERL_EXECUTABLE})
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_EXECUTABLE(glim_image glim.c 
  glim_image.c 
  matrix.c 
  smoothness.c
  glim.h 
  matrix.h 
  smoothness.h )


INSTALL(TARGETS 
  glim_image 
  DESTINATION bin)
